// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberCard: index render component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NumberCard
    description="Network"
    iconClass="fa-exclamation-circle"
    mode="warning"
    number="HEALTH"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col-xs-4 text-center"
        >
          <i
            aria-hidden="true"
            className="fa fa-exclamation-circle fa-5x smd-pad-8"
          />
        </div>
        <div
          className="col-xs-8"
        >
          <div
            className="h2 text-right"
          >
            <strong>
              HEALTH
            </strong>
          </div>
          <div
            className="h4 text-right desc"
          >
            Network
          </div>
        </div>
      </div>,
      "className": "pt-card pt-dark pt-elevation-2 warning",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa fa-exclamation-circle fa-5x smd-pad-8"
            />
          </div>,
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <strong>
                HEALTH
              </strong>
            </div>
            <div
              className="h4 text-right desc"
            >
              Network
            </div>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <i
              aria-hidden="true"
              className="fa fa-exclamation-circle fa-5x smd-pad-8"
            />,
            "className": "col-xs-4 text-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "className": "fa fa-exclamation-circle fa-5x smd-pad-8",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="h2 text-right"
              >
                <strong>
                  HEALTH
                </strong>
              </div>,
              <div
                className="h4 text-right desc"
              >
                Network
              </div>,
            ],
            "className": "col-xs-8",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <strong>
                  HEALTH
                </strong>,
                "className": "h2 text-right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "HEALTH",
                },
                "ref": null,
                "rendered": "HEALTH",
                "type": "strong",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Network",
                "className": "h4 text-right desc",
              },
              "ref": null,
              "rendered": "Network",
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa fa-exclamation-circle fa-5x smd-pad-8"
            />
          </div>
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <strong>
                HEALTH
              </strong>
            </div>
            <div
              className="h4 text-right desc"
            >
              Network
            </div>
          </div>
        </div>,
        "className": "pt-card pt-dark pt-elevation-2 warning",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-4 text-center"
            >
              <i
                aria-hidden="true"
                className="fa fa-exclamation-circle fa-5x smd-pad-8"
              />
            </div>,
            <div
              className="col-xs-8"
            >
              <div
                className="h2 text-right"
              >
                <strong>
                  HEALTH
                </strong>
              </div>
              <div
                className="h4 text-right desc"
              >
                Network
              </div>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                aria-hidden="true"
                className="fa fa-exclamation-circle fa-5x smd-pad-8"
              />,
              "className": "col-xs-4 text-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa fa-exclamation-circle fa-5x smd-pad-8",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="h2 text-right"
                >
                  <strong>
                    HEALTH
                  </strong>
                </div>,
                <div
                  className="h4 text-right desc"
                >
                  Network
                </div>,
              ],
              "className": "col-xs-8",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <strong>
                    HEALTH
                  </strong>,
                  "className": "h2 text-right",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "HEALTH",
                  },
                  "ref": null,
                  "rendered": "HEALTH",
                  "type": "strong",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Network",
                  "className": "h4 text-right desc",
                },
                "ref": null,
                "rendered": "Network",
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`NumberCard: index render component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NumberCard />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col-xs-4 text-center"
        >
          <i
            aria-hidden="true"
            className="fa undefined fa-5x smd-pad-8"
          />
        </div>
        <div
          className="col-xs-8"
        >
          <div
            className="h2 text-right"
          >
            <strong />
          </div>
          <div
            className="h4 text-right desc"
          />
        </div>
      </div>,
      "className": "pt-card pt-dark pt-elevation-2 neutral",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa undefined fa-5x smd-pad-8"
            />
          </div>,
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <strong />
            </div>
            <div
              className="h4 text-right desc"
            />
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <i
              aria-hidden="true"
              className="fa undefined fa-5x smd-pad-8"
            />,
            "className": "col-xs-4 text-center",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-hidden": "true",
              "className": "fa undefined fa-5x smd-pad-8",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="h2 text-right"
              >
                <strong />
              </div>,
              <div
                className="h4 text-right desc"
              />,
            ],
            "className": "col-xs-8",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <strong />,
                "className": "h2 text-right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "strong",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "h4 text-right desc",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col-xs-4 text-center"
          >
            <i
              aria-hidden="true"
              className="fa undefined fa-5x smd-pad-8"
            />
          </div>
          <div
            className="col-xs-8"
          >
            <div
              className="h2 text-right"
            >
              <strong />
            </div>
            <div
              className="h4 text-right desc"
            />
          </div>
        </div>,
        "className": "pt-card pt-dark pt-elevation-2 neutral",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-4 text-center"
            >
              <i
                aria-hidden="true"
                className="fa undefined fa-5x smd-pad-8"
              />
            </div>,
            <div
              className="col-xs-8"
            >
              <div
                className="h2 text-right"
              >
                <strong />
              </div>
              <div
                className="h4 text-right desc"
              />
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                aria-hidden="true"
                className="fa undefined fa-5x smd-pad-8"
              />,
              "className": "col-xs-4 text-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa undefined fa-5x smd-pad-8",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="h2 text-right"
                >
                  <strong />
                </div>,
                <div
                  className="h4 text-right desc"
                />,
              ],
              "className": "col-xs-8",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <strong />,
                  "className": "h2 text-right",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "strong",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "h4 text-right desc",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
